[package]
name = "mongeu"
description = "MONitor for GPU Energy Usage"
authors = ["Julian Ganz <ganz@fzi.de>"]
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["cargo", "derive"] }
futures-util = "0.3"
log = "0.4"
nvml-wrapper = "0.10"
simple_logger = "5.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.38", features = ["rt", "macros", "time", "sync", "net"] }
toml = { version = "0.8", features = ["parse"], default_features = false }
warp = { version = "0.3", default_features = false }

[profile.release]
opt-level = "s"
strip = true
lto = true
panic = "abort"
